<resources>
    <!--    <string name="app_name">SuperLock</string>-->
    <string name="app_name">Key Face</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>

    <string name="loading">Loading</string>
    <string name="user_image">user image</string>
    <!--    <string name="username">Username</string>-->
    <string name="username">Full Name</string>
    <string name="user_email">deyvi@company.com</string>
    <string name="nav_title_home">Home</string>
    <string name="nav_title_security">Security</string>
    <string name="nav_title_applications">Applications</string>
    <string name="nav_title_safe_zones">Safe Zones</string>
    <string name="nav_title_about_us">About Us</string>
    <string name="nav_title_configuration">Configuration</string>
    <string name="about_us_fragment">About Us Fragment</string>
    <string name="applications_fragment">Applications Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="safe_zones_fragment">Safe Zones Fragment</string>
    <string name="security_fragment">Security Fragment</string>
    <string name="clicked"> Clicked</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the Terms of Service and Privacy Policy</string>
    <string name="btn_register">Register</string>
    <string name="btn_continue">Continue</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="welcome">WELCOME!</string>
    <string name="hello_nice_to_see_you_again">Hello! Nice to see you again.</string>
    <string name="camera">Camera</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_forgot_password">Password Recovery</string>
    <string name="send">Send</string>
    <string name="forgot_password_title_description">Enter your e-mail address we\'ll send you a email to reset your password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logo_image">logo image</string>
    <string name="available_app_name">Available App Name</string>
    <string name="hint_search">Search application</string>
    <string name="all_apps">All Apps</string>
    <string name="added_apps">Added Apps</string>
    <string name="app_version">App Version</string>
    <string name="v1_0">1.0</string>
    <string name="about_app">About App</string>
    <string name="app_description"><![CDATA[

    <p>If you want to secure your apps in device, Key Face is the best way to do it. It\'s easy to use.</p>

    <p>You can set face-detection lock with the Key Face app.</p>

    <p>Key Face allows you to secure available apps on your device and provides you with the option to keep your data safe.<br />
    <br />
    <strong>Features:</strong><br />
    &bull; Face-detection.<br />
    &bull; Secure your safe perimeter to unlock your apps.<br />

    ]]></string>
    <string name="permission_required_to_make_sure_key_face_works_properly">Permission required to make sure Key Face works properly</string>
    <string name="protected_apps">Protected Apps</string>
    <string name="auto_start">Auto Start</string>
    <string name="lock_image">lock image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="image">image</string>
    <string name="password_type">Password type</string>
    <string name="fingerprint_unlock">Fingerprint unlock</string>
    <string name="change_pin">Change PIN</string>
    <string name="app_logo">app logo</string>
    <string name="intruder_image">intruder image</string>
    <string name="intruder_img_time">02/04/2023 12:00</string>
    <string name="junk_cleaner">Junk Cleaner</string>
    <string name="network_analysis">Network Analysis</string>
    <string name="booster">Booster</string>
    <string name="boost">Boost</string>
    <string name="memory_space">Memory Space</string>
    <string name="memory_space_amount">1.2GB / 1.8GB</string>
    <string name="clear">Clear</string>
    <string name="storage_space">Storage Space</string>
    <string name="storage_space_amount">Available space / Total space</string>
    <string name="protect">Protect</string>
    <string name="app_lock">App Lock</string>
    <string name="no_apps_needs_protection"> apps needs protection</string>


    <string name="err_msg_enter_first_name">Please enter your First Name.</string>
    <string name="err_msg_enter_last_name">Please enter your Last Name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_repeat_password">Please enter repeat password.</string>
    <string name="err_msg_password_and_repeat_password_mismatch">Password and repeat password do not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="err_msg_select_profile_image">Please select an image.</string>
    <string name="registry_successful">Thanks for registering with us.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email_sent_to_retrieve_password">Email send successfully to reset your password!</string>
    <string name="email_sending_failed_to_retrieve_password">Failed to send email to reset your password!</string>
    <string name="more_than_1_face_detected">More than one face detected. Please try again</string>
    <string name="no_face_detected_try_again">No face detected. Please try again</string>
    <string name="profile_updated_with_image">Profile updated with image</string>
    <string name="registration_successful">You are registered successfully</string>
    <string name="registration_unsuccessful">Something went wrong while registering</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="permission_denied">Permission Denied!</string>
    <string name="img_selection_failed">Image selection Failed!</string>
    <string name="btn_skip">Skip</string>
    <string name="capture">capture</string>
    <string name="btn_cancel">Cancel</string>
    <string name="set_pin">SET PIN</string>
    <string name="btn_next">NEXT</string>
    <string name="do_you_really_want_to_logout">Do you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="camera_unavailable">Camera Unavailable</string>

    <string name="confirm_pin">CONFIRM</string>
    <string name="enter_pin">"ENTER PIN"</string>
    <string name="pin_set_successful">PIN set successfully</string>
    <string name="pin_verified_successful">PIN verified successfully</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="invalid_pin_length">PIN must be of 4 digits</string>

    <string name="KeyFaceAppLockerDescription">This is the description for KeyFace App Locker.</string>
    <string name="fingerprint_not_supported_on_device">Fingerprint not supported on your device</string>
    <string name="set_up_FACE_ID">Set your app lock using Face-ID</string>
    <string name="set_location_unlock">Set your desired parameter to unlock your apps</string>
    <string name="login_failed">Login failed</string>
    <string name="active_device_admin">Please activate device administrator for this app</string>
    <string name="network_status">network status</string>
    <string name="upload">upload</string>
    <string name="download">download</string>
    <string name="check_network_status">Check Network Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="compare_unsuccessful">Something went wrong while comparing images</string>


</resources>