<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:layout_marginTop="80dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/user_image"
        android:paddingTop="15dp"
        android:src="@drawable/ic_user" />

    <TextView
        android:id="@+id/tv_username_nav_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:paddingTop="5dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_user_email_nav_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:paddingTop="5dp"
        android:text="@string/user_email"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />

</LinearLayout>