<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <!--    <androidx.cardview.widget.CardView
            android:id="@+id/cv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            app:cardCornerRadius="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher_round" />
        </androidx.cardview.widget.CardView>-->

    <FrameLayout
        android:id="@+id/fl_header_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo_image"
            android:scaleType="fitXY"
            android:src="@color/colorLogoBg" />

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:cardCornerRadius="35dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher_round" />
        </androidx.cardview.widget.CardView>

        <!-- <com.sk.superlock.util.CustomTextViewBold
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:text="@string/welcome"
             android:textColor="@color/colorTextPrimary"
             android:textSize="@dimen/login_title_text_size" />-->
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header_image">

        <com.sk.superlock.util.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/login_title_text_size" />

        <com.sk.superlock.util.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/hello_nice_to_see_you_again"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/login_semi_title_text_size" />

        <RadioGroup
            android:id="@+id/rg_login_type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_radio_button_height"
            android:layout_marginHorizontal="@dimen/login_activity_margin"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <com.sk.superlock.util.CustomRadioButton
                android:id="@+id/login_by_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/login_radio_button_marginStartEnd"
                android:layout_weight="1"
                android:background="@drawable/login_tab_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@drawable/login_tab_text_color_selector"
                android:textStyle="bold" />

            <com.sk.superlock.util.CustomRadioButton
                android:id="@+id/login_by_camera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/login_radio_button_marginStartEnd"
                android:layout_weight="1"
                android:background="@drawable/login_tab_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/camera"
                android:textColor="@drawable/login_tab_text_color_selector"
                android:textStyle="bold" />
        </RadioGroup>

        <FrameLayout
            android:id="@+id/login_fragment_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_activity_margin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/login_activity_margin" />

        <com.sk.superlock.util.CustomButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/login_activity_margin"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/login_activity_margin"
            android:background="@drawable/button_background_red"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:paddingBottom="@dimen/btn_padding"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_textSize" />

        <com.sk.superlock.util.CustomTextViewBold
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/et_margin"
            android:layout_marginTop="@dimen/et_margin"
            android:layout_marginEnd="@dimen/et_margin"
            android:text="@string/forgot_password"
            android:textColor="@color/colorTextSecondary"
            android:textSize="@dimen/et_textSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.sk.superlock.util.CustomTextView
                android:id="@+id/tv_don_t_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/clickable_text_view_padding"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/colorTextSecondary"
                android:textSize="@dimen/lbl_text_view_textSize" />

            <com.sk.superlock.util.CustomTextViewBold
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/clickable_text_view_padding"
                android:text="@string/btn_register"
                android:textColor="@color/colorButtonRed"
                android:textSize="@dimen/lbl_text_view_textSize" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>