<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/exit_app_dialog_bg">

    <com.sk.superlock.util.CustomTextView
        android:id="@+id/tv_dialog_text"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/do_you_really_want_to_logout"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/et_textSize"
        app:layout_constraintBottom_toTopOf="@+id/line_space"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_space"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_text" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.sk.superlock.util.CustomButton
            android:id="@+id/btn_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/et_textSize" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />
<!--            android:background="#EFEFF4" />-->

        <com.sk.superlock.util.CustomButton
            android:id="@+id/btn_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/et_textSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
