<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ApplicationsFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_view_bg"
        android:focusedByDefault="false"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryBackground="@color/transparent"
        app:queryHint="@string/hint_search" />


    <RadioGroup
        android:id="@+id/rg_app_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_radio_button_height"
        android:layout_marginHorizontal="@dimen/layout_padding"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <com.sk.superlock.util.CustomRadioButton
            android:id="@+id/btn_all_apps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/login_radio_button_marginStartEnd"
            android:layout_weight="1"
            android:background="@drawable/login_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/all_apps"
            android:textColor="@drawable/login_tab_text_color_selector"
            android:textStyle="bold" />

        <com.sk.superlock.util.CustomRadioButton
            android:id="@+id/btn_added_apps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/login_radio_button_marginStartEnd"
            android:layout_weight="1"
            android:background="@drawable/login_tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/added_apps"
            android:textColor="@drawable/login_tab_text_color_selector"
            android:textStyle="bold" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/child_apps_list_fragment_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_app_type" />


</androidx.constraintlayout.widget.ConstraintLayout>

    <!--    <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />-->


    <!--  <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/rv_app_list"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/tabs_layout" />-->